--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "express-livereload": "0.0.24",
     "jade": "~1.6.0",
     "morgan": "~1.3.0",
-    "node-sass-middleware": "^0.4.0",
-    "serve-favicon": "~2.1.3"
+    "node-sass-middleware": "~0.3.0",
+    "serve-favicon": "~2.1.3",
+    "jquery": "~2.1.1",
+    "rangeslider.js": "~0.3.7"
   }
 }
