--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+      "vue": "node ./bin/www | watchify -v -t vueify -e vueapp/main.js -o public/js/hipervideo-vue.js"
   },
   "dependencies": {
     "body-parser": "~1.8.1",
@@ -16,6 +17,14 @@
     "node-sass-middleware": "~0.3.0",
     "serve-favicon": "~2.1.3",
     "jquery": "~2.1.1",
-    "rangeslider.js": "~0.3.7"
+    "rangeslider.js": "~0.3.7",
+    "director": "^1.2.3",
+    "vue": "git://github.com/yyx990803/vue#next"
+  },
+  "devDependencies": {
+    "insert-css": "^0.2.0",
+    "uglify-js": "^2.4.15",
+    "vueify": "^0.1.0",
+    "watchify": "^2.0.0"
   }
 }
