--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "morgan": "~1.3.0",
     "node-sass-middleware": "~0.3.0",
     "serve-favicon": "~2.1.3",
-    "jquery": "~2.1.1",
-    "rangeslider.js": "~0.3.7"
+    "jquery": "~2.1.1"
   }
 }
