--- a/package.json
+++ b/package.json
@@ -4,20 +4,21 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-      "vue": "node ./bin/www | watchify -v -t vueify -e vueapp/main.js -o public/js/hipervideo-vue.js"
+    "vue": "node ./bin/www | watchify -v -t vueify -e vueapp/main.js -o public/js/hipervideo-vue.js"
   },
   "dependencies": {
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
     "debug": "~2.0.0",
+    "director": "^1.2.3",
     "express": "~4.9.0",
     "express-livereload": "0.0.24",
     "jade": "~1.6.0",
+    "jquery": "~2.1.1",
     "morgan": "~1.3.0",
     "node-sass-middleware": "~0.3.0",
     "serve-favicon": "~2.1.3",
-    "jquery": "~2.1.1",
-    "director": "^1.2.3",
+    "underscore": "^1.7.0",
     "vue": "git://github.com/yyx990803/vue#next"
   },
   "devDependencies": {
