--- a/package.json
+++ b/package.json
@@ -3,16 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node app.js",
-    "vue": "node app.js | watchify -v -t vueify -e app/vue/main.js -o public/js/hipervideo-vue.js"
+    "vue": "watchify -v -t vueify -e app/vue/main.js -o public/js/hipervideo-vue.js | gulp"
   },
   "dependencies": {
-    "body-parser": "~1.8.1",
+    "body-parser": "^1.8.4",
+    "connect-livereload": "^0.5.2",
     "cookie-parser": "~1.3.3",
     "debug": "~2.0.0",
     "director": "^1.2.3",
     "express": "~4.9.0",
-    "express-livereload": "0.0.24",
     "jade": "~1.6.0",
     "jquery": "~2.1.1",
     "morgan": "~1.3.0",
@@ -22,6 +21,12 @@
     "vue": "git://github.com/yyx990803/vue#next"
   },
   "devDependencies": {
+    "gulp": "^3.8.10",
+    "gulp-clean": "^0.3.1",
+    "gulp-livereload": "^3.0.2",
+    "gulp-load-plugins": "^0.8.0",
+    "gulp-nodemon": "^1.0.4",
+    "gulp-ruby-sass": "^0.7.1",
     "insert-css": "^0.2.0",
     "uglify-js": "^2.4.15",
     "vueify": "^0.1.0",
