--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "gulp": "^3.8.10",
+    "gulp-browserify": "^0.5.0",
     "gulp-clean": "^0.3.1",
     "gulp-livereload": "^3.0.2",
     "gulp-load-plugins": "^0.8.0",
