--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "gulp-livereload": "^3.0.2",
     "gulp-load-plugins": "^0.8.0",
     "gulp-nodemon": "^1.0.4",
-    "gulp-ruby-sass": "^0.7.1",
+    "gulp-sass": "^1.2.4",
     "insert-css": "^0.2.0",
     "uglify-js": "^2.4.15",
     "vueify": "^0.1.0",
