--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.9.0",
     "jade": "~1.6.0",
     "jquery": "~2.1.1",
+    "leaflet": "^0.7.3",
     "morgan": "~1.3.0",
     "node-sass-middleware": "~0.3.0",
     "serve-favicon": "~2.1.3",
