--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "jade": "~1.6.0",
     "jquery": "~2.1.1",
     "leaflet": "^0.7.3",
+    "markdown": "^0.5.0",
     "morgan": "~1.3.0",
     "node-sass-middleware": "~0.3.0",
+    "perfect-scrollbar": "^0.5.9",
     "serve-favicon": "~2.1.3",
+    "slick-carousel": "^1.4.1",
     "underscore": "^1.7.0",
     "vue": "git://github.com/yyx990803/vue#next"
   },
