--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "dapes",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "node": "0.10.x",
+    "npm": "1.3.x"
+    },
   "scripts": {
     "vue": "watchify -v -t vueify -e app/vue/main.js -o public/js/main.js",
     "start": "node app.js"
