--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "gulp-sass": "^1.2.4",
     "insert-css": "^0.2.0",
     "uglify-js": "^2.4.15",
-    "vueify": "^0.1.0",
+    "vueify": "git://github.com/jardimin/vueify#master",
     "watchify": "^2.0.0"
   }
 }
