--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "marked": "^0.3.3",
     "morgan": "~1.3.0",
     "node-sass-middleware": "~0.3.0",
+    "noty": "^2.3.5",
     "perfect-scrollbar": "^0.5.9",
     "serve-favicon": "~2.1.3",
     "slick-carousel": "^1.4.1",
