--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "serve-favicon": "~2.1.3",
     "slick-carousel": "^1.4.1",
     "underscore": "^1.7.0",
-    "vue": "git://github.com/yyx990803/vue#master"
+    "vue": "0.11.8"
   },
   "devDependencies": {
     "gulp": "^3.8.10",
