--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "leaflet": "^0.7.3",
     "marked": "^0.3.3",
     "morgan": "~1.3.0",
+    "node-sass": "^4.12.0",
     "node-sass-middleware": "~0.3.0",
     "noty": "^2.3.5",
     "perfect-scrollbar": "^0.5.9",
